--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <title>PHP사이트</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <h1>Hello world!</h1>
-    <h1>Hello world!</h1>
-    <h1>Hello world!</h1>
-</body>
-</html>
+
+<nav class="navbar navbar-expand-sm bg-light">
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href="/">메인</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/dev/hello.php">헬로월드</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/dev/index.php">머하지?</a>
+    </li>
+  </ul>
+</nav>
+<br>
+
+<div class="container-fluid">
+  <h3>내 PHP 사이트</h3>
+  <h1>Hello world!</h1>
+  <h1>Hello world!</h1>
+  <h1>Hello world!</h1>
+
+</div>
