--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <script src="/dev/header.js"></script>
+
+
   <style>
     /* Remove the navbar's default margin-bottom and rounded borders */ 
     .navbar {
@@ -18,23 +21,9 @@
 <body>
 
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="/">부산경상대 손로빈</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li class="active"><a href="/">main</a></li>
-      <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="/">3월 28일<span class="caret"></span></a>
-        <ul class="dropdown-menu">
-          <li><a href="/dev/hello.php">hello.php 예제</a></li>
-          <li><a href="/dev/find.php">find.php 예제</a></li>
-        </ul>
-      </li>
-      <li><a href="/">4월 4일</a></li>
-    </ul>
-  </div>
-</nav>
+<header id = "header"></header>
+
+
 <br>
 
 <div class="col-sm-8 text-left"> 
